Updated colours, fixed spacing and updated sections

--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -26,3 +26,12 @@ body {
   font-family: var(--font-crimson-pro), serif;
   padding: env(safe-area-inset-top) env(safe-area-inset-right) env(safe-area-inset-bottom) env(safe-area-inset-left);
 }
+
+.hide-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+
+.hide-scrollbar {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
